Fix bridge spacing on mobile

--- a/app/assets/stylesheets/media/_mobile.scss
+++ b/app/assets/stylesheets/media/_mobile.scss
@@ -140,6 +140,7 @@
   }
 
   div#bridge {
+    width: 97%;
     font-size: 90%;
   }
 
